--- a/index.html
+++ b/index.html
@@ -2,27 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portfolio | Your Name</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Welcome to my portfolio website!</p>
+        <div class="container">
+            <h1>Your Name</h1>
+            <p>Front-End Developer | UI/UX Enthusiast</p>
+        </div>
     </header>
-    <section>
+
+    <nav>
+        <div class="container">
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <section id="about" class="container">
         <h2>About Me</h2>
-        <p>This is a section where you can write about yourself, your interests, and your skills.</p>
+        <p>Detail your professional background, skills, and achievements. Explain what you're passionate about and what you're looking for in your career.</p>
     </section>
-    <section>
+
+    <section id="projects" class="container">
         <h2>Projects</h2>
-        <p>A section dedicated to showcasing your projects. Include any relevant links, images, and descriptions.</p>
+        <div class="project">
+            <h3>Project Title</h3>
+            <p>Description of the project, the technologies used, and the challenges faced.</p>
+            <a href="#">View Project</a>
+        </div>
+        <!-- Repeat for each project -->
     </section>
-    <section>
+
+    <section id="contact" class="container">
         <h2>Contact</h2>
-        <p>Provide ways for people to contact you, such as your email address, LinkedIn profile, or other social media links.</p>
+        <p>Provide information on how you can be contacted, including a form if desired, or simply an email address and links to social media.</p>
     </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Your Name</p>
+        </div>
+    </footer>
 </body>
 </html>
