changes to file index and style

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abhishek Teli - Data Engineer</title>
   <link rel="stylesheet" href="styles.css">
@@ -12,26 +13,41 @@
     <p>Data Engineer | Innovator | Tech Enthusiast</p>
   </header>
 
-  <section id="about">
+  <section id="about" class="info-section">
     <div class="container">
-      <h2>About Me: Abhishek Teli, Data Engineer</h2>
-      <p>Hello! I'm Abhishek Teli, a dedicated and results-driven Data Engineer with over three years of experience specializing in cloud-based data solutions and scalable data pipelines. My professional journey at esteemed organizations like EXLService and Barclays has equipped me with a profound understanding of data infrastructure, ETL processes, and cloud services.</p>
-      <p><strong>Career Highlights:</strong></p>
+      <!-- About Me content remains the same -->
+    </div>
+  </section>
+
+  <section id="projects" class="info-section">
+    <div class="container">
+      <h2>Projects</h2>
+      <p>Here are some of my projects hosted on GitHub. Please feel free to check them out:</p>
       <ul>
-        <li>Innovative Problem-Solving: At EXLService, I spearheaded...</li>
-        <li>Data Pipeline Mastery: During my tenure at Barclays, I designed and implemented...</li>
-        <li>Educational Foundation: I hold a Master's degree in Computer Science from Syracuse University...</li>
-        <li>Technical Proficiency: My expertise spans a wide range...</li>
-        <li>Passion for Innovation: Beyond my technical roles...</li>
+        <li><a href="https://github.com/abhishekteli/Project1" target="_blank">Project 1</a> - Description of Project 1.</li>
+        <li><a href="https://github.com/abhishekteli/Project2" target="_blank">Project 2</a> - Description of Project 2.</li>
+        <li><a href="https://github.com/abhishekteli/Project3" target="_blank">Project 3</a> - Description of Project 3.</li>
+        <!-- Add more projects as needed -->
       </ul>
-      <p>Connect with Me:</p>
-      <p>Whether you're interested in discussing potential collaborations, exploring innovative data solutions, or simply connecting, I'm always open to engaging with fellow professionals and enthusiasts in the field. Let's explore how we can drive data-forward initiatives together!</p>
-      <p><a href="https://www.linkedin.com/in/abhishekteli">LinkedIn: abhishekteli</a> | <a href="https://github.com/abhishekteli">GitHub: abhishekteli</a></p>
+    </div>
+  </section>
+
+  <section id="opportunities" class="info-section">
+    <div class="container">
+      <h2>Open to Opportunities</h2>
+      <p>I am currently seeking new challenges and opportunities in data engineering. If you have an opportunity or know someone who might, please feel free to <a href="mailto:teli.abhi01@gmail.com">contact me</a>.</p>
+    </div>
+  </section>
+
+  <section id="resume" class="info-section">
+    <div class="container">
+      <h2>Resume</h2>
+      <p>You can view my latest resume <a href="resume.pdf" target="_blank">here</a>.</p>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2024 Abhishek Teli</p>
+    <p>&copy; 2024 Abhishek Teli | <a href="mailto:teli.abhi01@gmail.com">Contact Me</a></p>
   </footer>
 </body>
 </html>
