changes to file index and style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
 
   <section id="about" class="info-section">
     <div class="container">
-      <!-- About Me content remains the same -->
+        <h2>About Me: Abhishek Teli, Data Engineer</h2>
+        <p>Hello! I'm Abhishek Teli, a dedicated and results-driven Data Engineer with over three years of experience specializing in cloud-based data solutions and scalable data pipelines. My professional journey at esteemed organizations like EXLService and Barclays has equipped me with a profound understanding of data infrastructure, ETL processes, and cloud services.</p>
+        <p><strong>Career Highlights:</strong></p>
+        <ul>
+          <li>Innovative Problem-Solving: At EXLService, I spearheaded...</li>
+          <li>Data Pipeline Mastery: During my tenure at Barclays, I designed and implemented...</li>
+          <li>Educational Foundation: I hold a Master's degree in Computer Science from Syracuse University...</li>
+          <li>Technical Proficiency: My expertise spans a wide range...</li>
+          <li>Passion for Innovation: Beyond my technical roles...</li>
+        </ul>
+        <p>Connect with Me:</p>
+        <p>Whether you're interested in discussing potential collaborations, exploring innovative data solutions, or simply connecting, I'm always open to engaging with fellow professionals and enthusiasts in the field. Let's explore how we can drive data-forward initiatives together!</p>
+        <p><a href="https://www.linkedin.com/in/abhishekteli">LinkedIn: abhishekteli</a> | <a href="https://github.com/abhishekteli">GitHub: abhishekteli</a></p>
     </div>
   </section>
 
