--- a/index.html
+++ b/index.html
@@ -1,65 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abhishek Teli - Data Engineer</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Data Engineering Portfolio</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-  <header>
-    <h1>Abhishek Teli</h1>
-    <p>Data Engineer | Innovator | Tech Enthusiast</p>
-  </header>
+    <header>
+        <div class="container">
+            <h1>Your Name</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <section id="about" class="info-section">
-    <div class="container">
-        <h2>About Me: Abhishek Teli, Data Engineer</h2>
-        <p>Hello! I'm Abhishek Teli, a dedicated and results-driven Data Engineer with over three years of experience specializing in cloud-based data solutions and scalable data pipelines. My professional journey at esteemed organizations like EXLService and Barclays has equipped me with a profound understanding of data infrastructure, ETL processes, and cloud services.</p>
-        <p><strong>Career Highlights:</strong></p>
-        <ul>
-          <li>Innovative Problem-Solving: At EXLService, I spearheaded...</li>
-          <li>Data Pipeline Mastery: During my tenure at Barclays, I designed and implemented...</li>
-          <li>Educational Foundation: I hold a Master's degree in Computer Science from Syracuse University...</li>
-          <li>Technical Proficiency: My expertise spans a wide range...</li>
-          <li>Passion for Innovation: Beyond my technical roles...</li>
-        </ul>
-        <p>Connect with Me:</p>
-        <p>Whether you're interested in discussing potential collaborations, exploring innovative data solutions, or simply connecting, I'm always open to engaging with fellow professionals and enthusiasts in the field. Let's explore how we can drive data-forward initiatives together!</p>
-        <p><a href="https://www.linkedin.com/in/abhishekteli">LinkedIn: abhishekteli</a> | <a href="https://github.com/abhishekteli">GitHub: abhishekteli</a></p>
-    </div>
-  </section>
+    <section id="about" class="section">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>This is where you can introduce yourself. Talk about your background, experience, skills, and anything else you think is relevant. You can also include links to your social media profiles, GitHub repository, or resume.</p>
+            <p>Feel free to customize this page to fit your style and personality.</p>
+        </div>
+    </section>
 
-  <section id="projects" class="info-section">
-    <div class="container">
-      <h2>Projects</h2>
-      <p>Here are some of my projects hosted on GitHub. Please feel free to check them out:</p>
-      <ul>
-        <li><a href="https://github.com/abhishekteli/Project1" target="_blank">Project 1</a> - Description of Project 1.</li>
-        <li><a href="https://github.com/abhishekteli/Project2" target="_blank">Project 2</a> - Description of Project 2.</li>
-        <li><a href="https://github.com/abhishekteli/Project3" target="_blank">Project 3</a> - Description of Project 3.</li>
-        <!-- Add more projects as needed -->
-      </ul>
-    </div>
-  </section>
+    <!-- More sections (e.g., projects, contact) can be added similarly -->
 
-  <section id="opportunities" class="info-section">
-    <div class="container">
-      <h2>Open to Opportunities</h2>
-      <p>I am currently seeking new challenges and opportunities in data engineering. If you have an opportunity or know someone who might, please feel free to <a href="mailto:teli.abhi01@gmail.com">contact me</a>.</p>
-    </div>
-  </section>
-
-  <section id="resume" class="info-section">
-    <div class="container">
-      <h2>Resume</h2>
-      <p>You can view my latest resume <a href="resume.pdf" target="_blank">here</a>.</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2024 Abhishek Teli | <a href="mailto:teli.abhi01@gmail.com">Contact Me</a></p>
-  </footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Your Data Engineering Portfolio</p>
+        </div>
+    </footer>
 </body>
 </html>
