--- a/index.html
+++ b/index.html
@@ -13,25 +13,17 @@
         <p>Hello! I'm Abhishek Teli, a dedicated and results-driven Data Engineer with over three years of experience specializing in cloud-based data solutions and scalable data pipelines. My professional journey at esteemed organizations like EXLService and Barclays has equipped me with a profound understanding of data infrastructure, ETL processes, and cloud services.</p>
         <p><strong>Career Highlights:</strong></p>
         <ul>
-          <li>Innovative Problem-Solving: At EXLService, I spearheaded...</li>
-          <li>Data Pipeline Mastery: During my tenure at Barclays, I designed and implemented...</li>
-          <li>Educational Foundation: I hold a Master's degree in Computer Science from Syracuse University...</li>
-          <li>Technical Proficiency: My expertise spans a wide range...</li>
-          <li>Passion for Innovation: Beyond my technical roles...</li>
+          <li>Innovative Problem-Solving: At EXLService, I spearheaded the development of a multi-account AWS data pipeline, enhancing data ingestion and transformation efficiency by 40%. My role involved optimizing AWS Data Sync and Kinesis for robust data ingestion, employing AWS Lambda and EventBridge for streamlined pipeline automation, and ensuring data integrity with AWS Lambda and Glue PySpark scripts.</li>
+          <li>Data Pipeline Mastery: During my tenure at Barclays, I designed and implemented a transformative data pipeline managing over 150 million records, significantly reducing manual effort and improving data processing time. My work with PySpark, Airflow DAGs, and AWS Glue facilitated the seamless migration of large data sets, improving runtime by 40% and contributing to a more scalable project infrastructure.</li>
+          <li>Educational Foundation: I hold a Master's degree in Computer Science from Syracuse University, where I deepened my knowledge in critical areas such as Data Structures, Machine Learning Algorithms, Data Modeling, Data Warehousing, and Cloud Computing.</li>
+          <li>Technical Proficiency: My expertise spans a wide range of tools and technologies, including ETL/ELT tools (Spark, Kafka, AWS Glue), Data Warehousing/Data Lake solutions (S3, Redshift, BigQuery), programming languages (Python, Java, Scala), and cloud platforms (AWS, GCP).</li>
+          <li>Passion for Innovation: Beyond my technical roles, I thrive on tackling challenging problems, optimizing data workflows, and contributing to projects that leverage data for actionable insights. My recent project, a Real Estate Chat Bot, exemplifies my ability to integrate cutting-edge technologies like LangChain and ChatGPT to enhance user engagement and data-driven decision-making.</li>
         </ul>
         <p>Connect with Me:</p>
         <p>Whether you're interested in discussing potential collaborations, exploring innovative data solutions, or simply connecting, I'm always open to engaging with fellow professionals and enthusiasts in the field. Let's explore how we can drive data-forward initiatives together!</p>
         <p><a href="https://www.linkedin.com/in/abhishekteli">LinkedIn: abhishekteli</a> | <a href="https://github.com/abhishekteli">GitHub: abhishekteli</a></p>
         </div>
     </header>
-
-    <section id="about" class="section">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>This is where you can introduce yourself. Talk about your background, experience, skills, and anything else you think is relevant. You can also include links to your social media profiles, GitHub repository, or resume.</p>
-            <p>Feel free to customize this page to fit your style and personality.</p>
-        </div>
-    </section>
 
     <!-- More sections (e.g., projects, contact) can be added similarly -->
 
