--- a/index.html
+++ b/index.html
@@ -25,7 +25,36 @@
         </div>
     </header>
 
-    <!-- More sections (e.g., projects, contact) can be added similarly -->
+    <section id="projects" class="info-section">
+    <div class="container">
+      <h2>Projects</h2>
+      <p>Here are some of my projects hosted on GitHub. Please feel free to check them out:</p>
+      <ul>
+        <li><a href="https://github.com/abhishekteli/Project1" target="_blank">Project 1</a> - Description of Project 1.</li>
+        <li><a href="https://github.com/abhishekteli/Project2" target="_blank">Project 2</a> - Description of Project 2.</li>
+        <li><a href="https://github.com/abhishekteli/Project3" target="_blank">Project 3</a> - Description of Project 3.</li>
+        <!-- Add more projects as needed -->
+      </ul>
+    </div>
+  </section>
+
+  <section id="opportunities" class="info-section">
+    <div class="container">
+      <h2>Open to Opportunities</h2>
+      <p>I am currently seeking new challenges and opportunities in data engineering. If you have an opportunity or know someone who might, please feel free to <a href="mailto:teli.abhi01@gmail.com">contact me</a>.</p>
+    </div>
+  </section>
+
+  <section id="resume" class="info-section">
+    <div class="container">
+      <h2>Resume</h2>
+      <p>You can view my latest resume <a href="resume.pdf" target="_blank">here</a>.</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 Abhishek Teli | <a href="mailto:teli.abhi01@gmail.com">Contact Me</a></p>
+  </footer>
 
     <footer>
         <div class="container">
