--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h2>About Me: Abhishek Teli, Cloud Data Engineer</h2>
+            <h2>About Me: Abhishek Teli, Data Engineer</h2>
         <p>Hello! I'm Abhishek Teli, a dedicated and results-driven Data Engineer with over three years of experience specializing in cloud-based data solutions and scalable data pipelines. My professional journey at esteemed organizations like EXLService and Barclays has equipped me with a profound understanding of data infrastructure, ETL processes, and cloud services.</p>
         <p><strong>Career Highlights:</strong></p>
         <ul>
