--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2024 Abhishek Teli | <a href="mailto:teli.abhi01@gmail.com">Contact Me</a></p>
+        <p>&copy; 2024 Abhishek Teli | <a href="mailto:teli.abhi01@gmail.com" class="button">Contact Me</a></p>
     </footer>
 </body>
 </html>
