--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="resume" class="info-section">
         <div class="container">
             <h2>Resume</h2>
-            <p>You can view my latest resume <a href="Abhiteli.pdf" target="_blank">here</a>.</p>
+            <p>You can view my latest resume <a href="AbhiTeliResume.pdf" target="_blank">here</a>.</p>
         </div>
     </section>
     
