--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Data Engineering Portfolio</title>
+    <title>Abhishek Teli</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
     <!-- Google Analytics tracking code -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P8J1DQQL0J"></script>
@@ -42,6 +42,7 @@
                     <li><a href="#about-me">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#resume">Resume</a></li>
+                    <li><a href="#certifications">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -50,7 +51,7 @@
     <section id="about-me" class="info-section">
         <div class="container">
             <h2>About Me: Abhishek Teli, Data Engineer</h2>
-            <p>Hello! I'm Abhishek Teli, a dedicated and results-driven Data Engineer with over three years of experience specializing in cloud-based data solutions and scalable data pipelines. My professional journey at esteemed organizations like EXLService and Barclays has equipped me with a profound understanding of data infrastructure, ETL processes, and cloud services.</p>
+            <p>Hello! I'm Abhishek Teli, a dedicated and passionate Data Engineer with over three years of experience specializing in cloud-based data solutions and scalable data pipelines. My professional journey at esteemed organizations like EXLService and Barclays has equipped me with a profound understanding of data infrastructure, ETL processes, and cloud services.</p>
             <p><strong>Career Highlights:</strong></p>
             <ul>
                 <li>Innovative Problem-Solving: At EXLService, I spearheaded the development of a multi-account AWS data pipeline, enhancing data ingestion and transformation efficiency by 40%. My role involved optimizing AWS Data Sync and Kinesis for robust data ingestion, employing AWS Lambda and EventBridge for streamlined pipeline automation, and ensuring data integrity with AWS Lambda and Glue PySpark scripts.</li>
@@ -60,7 +61,7 @@
                 <li>Passion for Innovation: Beyond my technical roles, I thrive on tackling challenging problems, optimizing data workflows, and contributing to projects that leverage data for actionable insights. My recent project, a Real Estate Chat Bot, exemplifies my ability to integrate cutting-edge technologies like LangChain and ChatGPT to enhance user engagement and data-driven decision-making.</li>
             </ul>
             <p>Connect with Me:</p>
-            <p>Whether you're interested in discussing potential collaborations, exploring innovative data solutions, or simply connecting, I'm always open to engaging with fellow professionals and enthusiasts in the field. Let's explore how we can drive data-forward initiatives together!</p>
+            <p>If you are interested in discussing potential collaborations, exploring innovative data solutions, or simply connecting, I'm always open to engaging with fellow professionals and enthusiasts in the field. Let's explore how we can drive data-forward initiatives together!</p>
             <p><a href="https://www.linkedin.com/in/abhishekteli">LinkedIn: abhishekteli</a> | <a href="https://github.com/abhishekteli">GitHub: abhishekteli</a></p>
         </div>
     </section>
@@ -79,7 +80,20 @@
             </ul>
         </div>
     </section>
-    
+
+    <section id="certifications" class="info-section">
+        <div class="container">
+            <h2>Certifications</h2>
+            <p>As a effort to keep up with ever growing Technology, I have attained few certifications</p>
+            <ul>
+                <li><a href="https://credentials.databricks.com/5f13cbde-57cb-4d22-b9f2-b8fc471f8696" target="_blank">Databricks Certified Associate Developer for Apache Spark 3.0</a></li>
+                <li><a href="https://www.credential.net/f5504d7d-df2f-42b4-9211-51981810cf6e" target="_blank">Google Cloud Professional Data Engineer</a></li>
+                <li><a href="https://www.credly.com/badges/f66e67b6-8d0b-4578-bfe3-bcd62b076f4f/linked_in_profile" target="_blank">AWS Certified Solutions Architect – Associate</a></li>
+                <li><a href="https://www.hackerrank.com/certificates/ec74fd15f322" target="_blank">Certified Advanced SQL Developer</a></li> 
+            </ul>
+        </div>
+    </section>
+
     <section id="resume" class="info-section">
         <div class="container">
             <h2>Resume</h2>
@@ -90,7 +104,6 @@
     <footer>
         <p>&copy; 2024 Abhishek Teli | <a href="mailto:teli.abhi01@gmail.com" class="button">Contact Me</a></p>
         <p>Visits: <span id="visitCount">0</span></p>
-        <p>You will receive a notification when someone visits your website.</p>
     </footer>
 </body>
 </html>
