--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Your Data Engineering Portfolio</h1>
+            <h1>Welcome to my World!!!</h1>
             <nav>
                 <ul>
                     <li><a href="#about-me">About Me</a></li>
@@ -50,7 +50,7 @@
 
     <section id="about-me" class="info-section">
         <div class="container">
-            <h2>About Me: Abhishek Teli, Data Engineer</h2>
+            <h2>About Me:</h2>
             <p>Hello! I'm Abhishek Teli, a dedicated and passionate Data Engineer with over three years of experience specializing in cloud-based data solutions and scalable data pipelines. My professional journey at esteemed organizations like EXLService and Barclays has equipped me with a profound understanding of data infrastructure, ETL processes, and cloud services.</p>
             <p><strong>Career Highlights:</strong></p>
             <ul>
