--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="#about-me">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#resume">Resume</a></li>
-                    <li><a href="#certifications">Resume</a></li>
+                    <li><a href="#certifications">Certifications</a></li>
                 </ul>
             </nav>
         </div>
