--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Welcome to my World!!!</h1>
+        <div class="container header-content">
+            <h1>Welcome to my World!</h1>
+            <p class="tagline">I'm Abhishek Teli, a Data Engineer with a knack for solving complex data challenges.</p>
+            <a href="#projects" class="cta-button">View My Projects</a>
             <nav>
                 <ul>
                     <li><a href="#about-me">About Me</a></li>
